<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainBarHolder">

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:id="@+id/profileTab"
            android:text="@string/main_bar_profile"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toProfile"/>

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/postPathTab"
            android:text="@string/main_bar_new_path"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toNewPath"/>

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:id="@+id/flowTab"
            android:text="@string/main_bar_flow"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toFlow"/>

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:id="@+id/friendsTab"
            android:text="@string/main_bar_friends"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toFriends"/>

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:id="@+id/messageTab"
            android:text="@string/main_bar_messages"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toMessages"/>

        <TextView
            android:background="@color/grass_green"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:id="@+id/optionsTab"
            android:text="@string/main_bar_options"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toOptions"/>

    </LinearLayout>

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/main"
        android:layout_below="@+id/mainBarHolder" />

</RelativeLayout>

