<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.phijo967.lab4kamera.fragments.ProfileScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileTop">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:id="@+id/profileScreenProfileImg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_screen_name_text"
            android:id="@+id/profileScreenNameText"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/profileScreenProfileImg"
            android:layout_marginTop="23dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_screen_number_of_paths_text"
            android:id="@+id/profileScreenNumberOfPathsText"
            android:layout_below="@+id/profileScreenLastnameText"
            android:layout_toEndOf="@+id/profileScreenProfileImg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_screen_latname_text"
            android:id="@+id/profileScreenLastnameText"
            android:layout_below="@+id/profileScreenNameText"
            android:layout_toEndOf="@+id/profileScreenProfileImg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_screen_lenght_went_text"
            android:id="@+id/profileScreenLengthWentText"
            android:layout_gravity="left|top"
            android:layout_below="@+id/profileScreenNumberOfPathsText"
            android:layout_toEndOf="@+id/profileScreenProfileImg" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/profileScreenFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTop"
        android:layout_alignParentBottom="true">

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">


    </ScrollView>

</RelativeLayout>